Fix order's page modifier not showing, Add fixes for Hami

--- a/styles/_main.scss
+++ b/styles/_main.scss
@@ -1465,7 +1465,7 @@ h6 {
   flex-direction: column;
   padding: 0 10px;
   border-radius: 4px;
-  height: 40px;
+  height: 45px;
   width: 40px;
   min-width: 40px;
   margin: 0 10px;
